<resources>
    <string name="app_name">MyAndroid</string>
    <string name="homework">Homework</string>
    <string name="homework_1">Homework 1</string>
    <string name="flags">Flags</string>
    <string name="animation">Animation</string>
    <string name="MyFirstApp">Мое первое приложение!</string>
    <string name="armenia">Armenia</string>
    <string name="austria">Austria</string>
    <string name="belgium">Belgium</string>
    <string name="latvia">Latvia</string>
    <string name="denmark">Denmark</string>
    <string name="spain">Spain</string>
    <string name="cat">Cat</string>


</resources>
