<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground">


    <LinearLayout
        android:id="@+id/armenia"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/yellow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/armenia"
                android:textSize="15sp"
                android:gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/austria"
        android:layout_width="135dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/austria"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Belgium"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red" />


    </LinearLayout>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:textSize="15sp"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/belgium" />

    <LinearLayout
        android:id="@+id/latvia"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/burgundy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/burgundy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latvia"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/denmark"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:background="@color/red"
            />

        <RelativeLayout
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:background="@color/red">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:background="@color/red">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="55dp"
            android:background="@color/red">
        </RelativeLayout>

    </RelativeLayout>

        <TextView
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/denmark" />

    <LinearLayout
        android:id="@+id/Spain"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/red2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:background="@color/yellow2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/red2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spain"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>
